css: fix schedule page overlap with navbar

--- a/assets/css/_schedule.less
+++ b/assets/css/_schedule.less
@@ -1,3 +1,8 @@
+body.schedule {
+	// fix schedule page overlap with navbar
+	padding-top: @navbar-height;
+}
+
 .schedule {
 	-webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
 
